style.css
* {
    margin: 0px;
    padding: 0px;
}

body {
    background-color: rgb(32, 32, 32);
    background: radial-gradient(circle, rgba(32,32,32,1) 0%, rgba(12,12,12,1) 100%); 
    color: rgb(184, 184, 184)
}

#content {
    display: flex;
    min-height: 100vh;
    justify-content: center;
    align-items: center;
    gap: 60px;
}

#options, #clear {
    margin-top: 50px;
}

#options, #modes {
    display: flex;
    flex-direction: column;
    gap: 15px;
}

#options {
    border-radius: 8px;
    border-style: solid;
    border-color: rgb(44, 44, 44);
    padding: 15px;
}

#clear {
    background-color: rgb(90,90,90);
    transition-duration: 0.4s;
}

#clear:hover {
    background-color: rgb(110,110,110);
}

.radio-option, #borderscontainer {
    display: flex;
    align-items: center;
    justify-content: end;
    gap: 15px;
}

#borderscontainer {
    border-bottom-style: solid;
    border-color: rgb(44, 44, 44);
    padding-bottom: 10px;
}
.radio-option input[type="radio"] {
    order: 2;
}

.radio-option label {
    order: 1;
}

#container{
    display: grid;
    border: 1px solid grey;
    background-color: white;
}


#clear {
    width: 100px;
    height: 60px;
    border-radius: 8px;
    border-color: rgb(80, 80, 80);
    font-size: 18px;
}

.block {
    background-color: rgb(255, 255, 255);
    box-sizing: border-box;
}

.borders {
    border-top: 1px solid grey;
    border-left: 1px solid grey;
}

.bordersleft {
    border-top: 1px solid grey;
}

.borderstop {
    border-left: 1px solid grey;
}

.noborders {
    border: none;
}


/* shamelessly taken from https://www.w3schools.com/howto/howto_js_rangeslider.asp */

.slidecontainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 480px; /* Width of the outside container */
    gap: 10px;
    margin-bottom: 10px;
  }
  
  /* The slider itself */
  .slider {
    -webkit-appearance: none;  /* Override default CSS styles */
    appearance: none;
    width: 100%; /* Full-width */
    height: 10px; /* Specified height */
    background: rgb(110,110,110); /* Grey background */
    outline: none; /* Remove outline */
    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
    transition: opacity .2s;
    border-radius: 8px;
  }
  
  /* Mouse-over effects */
  .slider:hover {
    opacity: 1; /* Fully shown on mouse-over */
  }
  
  /* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
  .slider::-webkit-slider-thumb {
    -webkit-appearance: none; /* Override default look */
    appearance: none;
    width: 15px; /* Set a specific slider handle width */
    height: 15px; /* Slider handle height */
    background: #04AA6D; /* Green background */
    cursor: pointer; /* Cursor on hover */
  }
  
  .slider::-moz-range-thumb {
    width: 20px; /* Set a specific slider handle width */
    height: 20px; /* Slider handle height */
    background: darkgrey; /* Green background */
    cursor: pointer; /* Cursor on hover */
    border-radius: 50%
  }

